--- a/ssm/ssm_layer.ipynb
+++ b/ssm/ssm_layer.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch \n",
     "from torch import nn\n",
     "import numpy as np\n",
+    "from torch_scan import torch_scan\n",
     "\n",
     "class SSM(nn.Module):\n",
     "    \"\"\"Defines a SSM layer\n",
@@ -31,24 +32,31 @@
     "\n",
     "        C : Size = 1xN\n",
     "    \"\"\"\n",
-    "    def __init__(self, N : int, print_shape : bool):\n",
+    "    # def __init__(self, input_mats : bool, A, B, C):\n",
+    "    # def __init__(self, N : int, print_shape : bool, input_mats : bool, A, B, C):\n",
+    "    def __init__(self, A, B, C):\n",
     "        super().__init__()\n",
-    "        self.A = torch.rand(N, N)\n",
-    "        self.B = torch.rand(N, 1)\n",
-    "        self.C = torch.rand(1, N)\n",
+    "        # if not input_mats:\n",
+    "        #     self.A = torch.rand(N, N)\n",
+    "        #     self.B = torch.rand(N, 1)\n",
+    "        #     self.C = torch.rand(1, N)\n",
     "\n",
-    "        A = self.A\n",
-    "        B = self.B\n",
-    "        C = self.C\n",
-    "        \n",
-    "        if print_shape:\n",
-    "            print(f\"\"\"\n",
-    "            Shape of A -> {self.A.shape}\n",
-    "            Shape of B -> {self.B.shape} \n",
-    "            Shape of C -> {self.C.shape}\"\"\")\n",
-    "        return A, B, C\n",
+    "        #     A = self.A\n",
+    "        #     B = self.B\n",
+    "        #     C = self.C\n",
+    "            \n",
+    "        #     if print_shape:\n",
+    "        #         print(f\"\"\"\n",
+    "        #         Shape of A -> {self.A.shape}\n",
+    "        #         Shape of B -> {self.B.shape} \n",
+    "        #         Shape of C -> {self.C.shape}\"\"\")\n",
+    "        #     return A, B, C\n",
+    "        # if input_mats and A and B and C:\n",
+    "        self.A = A\n",
+    "        self.B = B\n",
+    "        self.C = C\n",
     "\n",
-    "    def discretize_signal(self, A, B, C, step, print_shape : bool):\n",
+    "    def discretize_signal(self, A, B, C, step):\n",
     "        \"\"\"\n",
     "\n",
     "        > To be applied on a discrete input sequence (u0, u1, ...) instead of continuous function\n",
@@ -66,24 +74,50 @@
     "            C remains the same\n",
     "\n",
     "        \"\"\"\n",
-    "        I = np.eye(A.shape[0])\n",
+    "        I = torch.eye(A.shape[0])\n",
     "        BL = torch.linalg.inv(I - (step / 2.0) * A)\n",
-    "        Ab = BL @ (I + (step / 2.0) * A)\n",
+    "        BL2 = (I + (step / 2) * A)\n",
+    "        Ab = BL @ BL2\n",
     "        Bb = (BL * step) @ B\n",
-    "        if print_shape:\n",
-    "            print(f\"\"\"\n",
-    "            Shape of I -> {self.I.shape}\n",
-    "            Shape of BL-> {self.BL.shape}\n",
-    "            Shape of Ab-> {self.Ab.shape}\n",
-    "            Shape of Bb-> {self.Bb.shape} \n",
-    "            Shape of C -> {self.C.shape}\"\"\")\n",
+    "        # if print_shape:\n",
+    "        #     print(f\"\"\"\n",
+    "        #     Shape of I -> {self.I.shape}\n",
+    "        #     Shape of BL-> {self.BL.shape}\n",
+    "        #     Shape of Ab-> {self.Ab.shape}\n",
+    "        #     Shape of Bb-> {self.Bb.shape} \n",
+    "        #     Shape of C -> {self.C.shape}\"\"\")\n",
+    "        return Ab, Bb, C\n",
+    "    \n",
+    "    def scan_SSM(self, Ab, Bb, Cb, u, x0):\n",
+    "        if isinstance(self.Ab, np.ndarray):\n",
+    "            self.Ab = torch.tensor(self.Ab, dtype=torch.float32)\n",
+    "        if isinstance(self.Bb, np.ndarray):\n",
+    "            self.Bb = torch.tensor(self.Bb, dtype=torch.float32)\n",
+    "        if isinstance(self.Cb, np.ndarray):\n",
+    "            self.Cb = torch.tensor(self.Cb, dtype=torch.float32)\n",
+    "        if isinstance(self.u, np.ndarray):\n",
+    "            self.u = torch.tensor(self.u, dtype=torch.float32)\n",
+    "        if isinstance(self.x0, np.ndarray):\n",
+    "            self.x0 = torch.tensor(self.x0, dtype=torch.float32)\n",
     "\n",
-    "        return Ab, Bb, C"
+    "        def step(x_k_1, u_k):\n",
+    "            x_k = Ab @ x_k_1 + Bb @ u_k\n",
+    "            y_k = Cb @ x_k\n",
+    "            return x_k, y_k\n",
+    "        \n",
+    "        return torch_scan(step, x0, u)\n",
+    "    \n",
+    "    def run_SSM(self, A, B, C, u):\n",
+    "        L = u.shape[0]\n",
+    "        N = A.shape[0]\n",
+    "        Ab, Bb, Cb = self.discretize_signal(A, B, C, step = 1./L)\n",
+    "        return self.scan_SSM(Ab, Bb, Cb, u[:, np.newaxis], np.zeros((N,)))[1]\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -132,10 +166,219 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'SSM' object has no attribute 'Ab'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[63], line 57\u001b[0m\n\u001b[1;32m     55\u001b[0m     anim \u001b[38;5;241m=\u001b[39m camera\u001b[38;5;241m.\u001b[39manimate()\n\u001b[1;32m     56\u001b[0m     anim\u001b[38;5;241m.\u001b[39msave(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimages/line.gif\u001b[39m\u001b[38;5;124m\"\u001b[39m, dpi\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m150\u001b[39m, writer\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimagemagick\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 57\u001b[0m example_ssm()\n",
+      "Cell \u001b[0;32mIn[63], line 27\u001b[0m, in \u001b[0;36mexample_ssm\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m u \u001b[38;5;241m=\u001b[39m example_force(ks \u001b[38;5;241m*\u001b[39m step)\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m# Approximation of y(t).\u001b[39;00m\n\u001b[0;32m---> 27\u001b[0m y \u001b[38;5;241m=\u001b[39m state\u001b[38;5;241m.\u001b[39mrun_SSM(\u001b[38;5;241m*\u001b[39mssm, u)\n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m# Plotting ---\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[62], line 106\u001b[0m, in \u001b[0;36mSSM.run_SSM\u001b[0;34m(self, A, B, C, u)\u001b[0m\n\u001b[1;32m    104\u001b[0m N \u001b[38;5;241m=\u001b[39m A\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m    105\u001b[0m Ab, Bb, Cb \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdiscretize_signal(A, B, C, step \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.\u001b[39m\u001b[38;5;241m/\u001b[39mL)\n\u001b[0;32m--> 106\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscan_SSM(Ab, Bb, Cb, u[:, np\u001b[38;5;241m.\u001b[39mnewaxis], np\u001b[38;5;241m.\u001b[39mzeros((N,)))[\u001b[38;5;241m1\u001b[39m]\n",
+      "Cell \u001b[0;32mIn[62], line 84\u001b[0m, in \u001b[0;36mSSM.scan_SSM\u001b[0;34m(self, Ab, Bb, Cb, u, x0)\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mscan_SSM\u001b[39m(\u001b[38;5;28mself\u001b[39m, Ab, Bb, Cb, u, x0):\n\u001b[0;32m---> 84\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mAb, np\u001b[38;5;241m.\u001b[39mndarray):\n\u001b[1;32m     85\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mAb \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mAb, dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[1;32m     86\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mBb, np\u001b[38;5;241m.\u001b[39mndarray):\n",
+      "File \u001b[0;32m~/miniconda3/envs/torch2/lib/python3.11/site-packages/torch/nn/modules/module.py:1688\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1686\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m modules:\n\u001b[1;32m   1687\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1688\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'SSM' object has no attribute 'Ab'"
+     ]
+    }
+   ],
+   "source": [
+    "# Example Run\n",
+    "from functools import partial\n",
+    "def example_mass(k, b, m):\n",
+    "    A = torch.tensor([[0, 1], [-k / m, -b / m]], dtype=torch.float32)\n",
+    "    B = torch.tensor([[0], [1.0 / m]], dtype=torch.float32)\n",
+    "    C = torch.tensor([[1.0, 0]], dtype=torch.float32)\n",
+    "    return A, B, C\n",
+    "\n",
+    "@partial(np.vectorize, signature=\"()->()\")\n",
+    "def example_force(t):\n",
+    "    x = np.sin(10 * t)\n",
+    "    return torch.tensor(x * (x > 0.5), dtype=torch.float32)\n",
+    "\n",
+    "def example_ssm():\n",
+    "    # SSM\n",
+    "    # A_n, B_n, C_n = example_mass(k=40, b=5, m=1)\n",
+    "    # ssm = SSM(A=A_n, B=B_n, C=C_n)\n",
+    "    ssm = example_mass(k=40, b=5, m=1)\n",
+    "    state = SSM(*ssm)\n",
+    "    # L samples of u(t).\n",
+    "    L = 100\n",
+    "    step = 1.0 / L\n",
+    "    ks = np.arange(L)\n",
+    "    u = example_force(ks * step)\n",
+    "\n",
+    "    # Approximation of y(t).\n",
+    "    y = state.run_SSM(*ssm, u)\n",
+    "\n",
+    "    # Plotting ---\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import seaborn\n",
+    "    from celluloid import Camera\n",
+    "\n",
+    "    seaborn.set_context(\"paper\")\n",
+    "    fig, (ax1, ax2, ax3) = plt.subplots(3)\n",
+    "    camera = Camera(fig)\n",
+    "    ax1.set_title(\"Force $u_k$\")\n",
+    "    ax2.set_title(\"Position $y_k$\")\n",
+    "    ax3.set_title(\"Object\")\n",
+    "    ax1.set_xticks([], [])\n",
+    "    ax2.set_xticks([], [])\n",
+    "\n",
+    "    # Animate plot over time\n",
+    "    for k in range(0, L, 2):\n",
+    "        ax1.plot(ks[:k], u[:k], color=\"red\")\n",
+    "        ax2.plot(ks[:k], y[:k], color=\"blue\")\n",
+    "        ax3.boxplot(\n",
+    "            [[y[k, 0] - 0.04, y[k, 0], y[k, 0] + 0.04]],\n",
+    "            showcaps=False,\n",
+    "            whis=False,\n",
+    "            vert=False,\n",
+    "            widths=10,\n",
+    "        )\n",
+    "        camera.snap()\n",
+    "    anim = camera.animate()\n",
+    "    anim.save(\"images/line.gif\", dpi=150, writer=\"imagemagick\")\n",
+    "example_ssm()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Tensor"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u = torch.from_numpy(np.eye(3, 3))\n",
+    "type(u)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random test\n",
+    "def discretize(A, B, C, step):\n",
+    "    I = torch.eye(A.shape[0])\n",
+    "    BL = torch.linalg.inv(I - (step / 2.0) * A)\n",
+    "    BL2 = (I + (step / 2) * A)\n",
+    "    Ab = BL @ BL2\n",
+    "    Bb = (BL * step) @ B\n",
+    "    return Ab, Bb, C\n",
+    "\n",
+    "def scan_SSM(Ab, Bb, Cb, u, x0):\n",
+    "    try :\n",
+    "        if isinstance(Ab, np.ndarray):\n",
+    "            Ab = torch.tensor(Ab, dtype=torch.float32)\n",
+    "        if isinstance(Bb, np.ndarray):\n",
+    "            Bb = torch.tensor(Bb, dtype=torch.float32)\n",
+    "        if isinstance(Cb, np.ndarray):\n",
+    "            Cb = torch.tensor(Cb, dtype=torch.float32)\n",
+    "        if isinstance(u, np.ndarray):\n",
+    "            u = torch.tensor(u, dtype=torch.float32)\n",
+    "        if isinstance(x0, np.ndarray):\n",
+    "            x0 = torch.tensor(x0, dtype=torch.float32)\n",
+    "        def step(x_k_1, u_k):\n",
+    "            x_k = Ab @ x_k_1 + Bb @ u_k\n",
+    "            y_k = Cb @ x_k\n",
+    "            return x_k, y_k\n",
+    "\n",
+    "        return torch_scan(step, x0, u)\n",
+    "    except Exception as e:\n",
+    "        print(f'{e}')\n",
+    "\n",
+    "def run_SSM(A, B, C, u):\n",
+    "    L = u.shape[0]\n",
+    "    N = A.shape[0]\n",
+    "    Ab, Bb, Cb = discretize(A, B, C, step=1.0 / L)\n",
+    "\n",
+    "    # Run recurrence\n",
+    "    return scan_SSM(Ab, Bb, Cb, u[:, np.newaxis], np.zeros((N,)))[1]\n",
+    "\n",
+    "\n",
+    "def example_mass(k, b, m):\n",
+    "    A = torch.tensor([[0, 1], [-k / m, -b / m]], dtype=torch.float32)\n",
+    "    B = torch.tensor([[0], [1.0 / m]], dtype=torch.float32)\n",
+    "    C = torch.tensor([[1.0, 0]], dtype=torch.float32)\n",
+    "    return A, B, C\n",
+    "\n",
+    "def example_force(t):\n",
+    "    x = np.sin(10 * t)\n",
+    "    return torch.tensor(x * (x > 0.5), dtype=torch.float32)\n",
+    "\n",
+    "def example_ssm():\n",
+    "    # SSM\n",
+    "    ssm = example_mass(k=40, b=5, m=1)\n",
+    "\n",
+    "    # L samples of u(t).\n",
+    "    L = 100\n",
+    "    step = 1.0 / L\n",
+    "    ks = np.arange(L)\n",
+    "    u = example_force(ks * step)\n",
+    "\n",
+    "    # Approximation of y(t).\n",
+    "    y = run_SSM(*ssm, u)\n",
+    "\n",
+    "    # Plotting ---\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import seaborn\n",
+    "    from celluloid import Camera\n",
+    "\n",
+    "    seaborn.set_context(\"paper\")\n",
+    "    fig, (ax1, ax2, ax3) = plt.subplots(3)\n",
+    "    camera = Camera(fig)\n",
+    "    ax1.set_title(\"Force $u_k$\")\n",
+    "    ax2.set_title(\"Position $y_k$\")\n",
+    "    ax3.set_title(\"Object\")\n",
+    "    ax1.set_xticks([], [])\n",
+    "    ax2.set_xticks([], [])\n",
+    "\n",
+    "    # Animate plot over time\n",
+    "    for k in range(0, L, 2):\n",
+    "        ax1.plot(ks[:k], u[:k], color=\"red\")\n",
+    "        ax2.plot(ks[:k], y[:k], color=\"blue\")\n",
+    "        ax3.boxplot(\n",
+    "            [[y[k, 0] - 0.04, y[k, 0], y[k, 0] + 0.04]],\n",
+    "            showcaps=False,\n",
+    "            whis=False,\n",
+    "            vert=False,\n",
+    "            widths=10,\n",
+    "        )\n",
+    "        camera.snap()\n",
+    "    anim = camera.animate()\n",
+    "    anim.save(\"images/line.gif\", dpi=150, writer=\"imagemagick\")\n",
+    "\n",
+    "example_ssm()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Line Animation](images/line.gif)"
+   ]
   }
  ],
  "metadata": {
